--- a/app/views/cryptocurrencies/index.html.erb
+++ b/app/views/cryptocurrencies/index.html.erb
@@ -1,19 +1,50 @@
-<!-- app/views/cryptocurrencies/index.html.erb -->
-<div class="table-responsive">
-  <table class="table table-hover">
-    <thead class="table-dark">
-    <tr>
-      <th>Criptomoneda</th>
-      <th>Valor actual en USD</th>
-    </tr>
-    </thead>
-    <tbody>
-    <% [@bitcoin_data, @ether_data, @cardano_data].each do |crypto_data| %>
-      <tr>
-        <td><%= crypto_data["asset_id_base"] %></td>
-        <td><%= number_to_currency(crypto_data["rate"], unit: "USD") %></td>
-      </tr>
+<div class="content">
+  <div class="header">
+    <div class="flex" style="display: flex; align-items: center;">
+      <h1 style="margin-right: 10px;">
+        Crypto prices
+      </h1>
+      <span>
+        9,162 assets
+      </span>
+    </div>
+    <div class="btn-group">
+      <button>
+        All assets
+      </button>
+      <button>
+        Tradable
+      </button>
+      <button>
+        Gainers
+      </button>
+      <button>
+        Losers
+      </button>
+    </div>
+  </div>
+  <div class="crypto-list">
+    <div class="crypto-item" style="font-weight: bold;">
+      <div class="crypto-name text-secondary">
+        Name
+      </div>
+      <div class="crypto-price text-secondary">
+        Price
+
+      </div>
+    </div>
+    <% @cryptocurrencies.each do |crypto| %>
+      <div class="crypto-item">
+        <div class="crypto-name">
+          <i class="fas fa-star" style="color: white; text-shadow: 0 0 2px black, 0 0 2px black, 0 0 2px black; margin-right: 5px; vertical-align: middle;"></i>
+          <%= image_tag "#{crypto[:symbol].upcase}.png", alt: crypto[:name], style: "width: 20px; height: 20px; margin-right: 5px; vertical-align: middle;" %>
+          <%= crypto[:name] %> (<span class="text-muted"><%= crypto[:symbol] %></span>)
+        </div>
+        <div class="crypto-price">
+          <%= number_to_currency(crypto[:price]) %>
+        </div>
+      </div>
     <% end %>
-    </tbody>
-  </table>
+
+  </div>
 </div>
