--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,24 +8,21 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to 'Calculadora de inversión', root_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Mis Inversiones', root_path, class: 'nav-link' %>
+          <%= link_to 'Calculadtor', root_path, class: 'nav-link' %>
         </li>
       <% end %>
     </ul>
     <ul class="navbar-nav">
       <% if user_signed_in? %>
         <li class="nav-item">
-          <%= button_to 'Cerrar Sesión', destroy_user_session_path, method: :delete, form: {class: "d-inline"}, class: 'btn btn-link nav-link', style: "padding-left: 0; padding-right: 0; border: none; box-shadow: none;" %>
+          <%= button_to 'Sign off', destroy_user_session_path, method: :delete, form: {class: "d-inline"}, class: 'btn btn-link nav-link', style: "padding-left: 0; padding-right: 0; border: none; box-shadow: none;" %>
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to 'Iniciar Sesión', new_user_session_path, class: 'nav-link' %>
+          <%= link_to 'Login', new_user_session_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Registrarse', new_user_registration_path, class: 'nav-link' %>
+          <%= link_to 'Register', new_user_registration_path, class: 'nav-link' %>
         </li>
       <% end %>
     </ul>
