--- a/app/views/cryptocurrencies/index.html.erb
+++ b/app/views/cryptocurrencies/index.html.erb
@@ -7,10 +7,10 @@
       <span>9,162 assets</span>
     </div>
     <div class="btn-group">
-      <button>All assets</button>
-      <button>Tradable</button>
-      <button>Gainers</button>
-      <button>Losers</button>
+      <button class="btn btn-primary">All assets</button>
+      <button class="btn btn-primary">Tradable</button>
+      <%= link_to 'Export to CSV', export_csv_cryptocurrencies_path, class: 'btn btn-info', style: 'text-decoration: none; margin-right: 0.5em;' %>
+      <%= link_to 'Export to JSON', export_json_cryptocurrencies_path, class: 'btn btn-info', style: 'text-decoration: none;' %>
     </div>
   </div>
   <div class="crypto-list">
@@ -20,7 +20,6 @@
       </div>
       <div class="crypto-price text-secondary">
         Price
-
       </div>
     </div>
     <% @cryptocurrencies.each do |crypto| %>
@@ -44,6 +43,7 @@
 
   </div>
 </div>
+
 
 
 <script>
