--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to 'Calculadtor', root_path, class: 'nav-link' %>
+          <%= link_to 'Calculator', root_path, class: 'nav-link' %>
         </li>
       <% end %>
     </ul>
