--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,9 +7,11 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <li class="nav-item">
-          <%= link_to 'Calculator', root_path, class: 'nav-link' %>
-        </li>
+        <% if current_user.has_role? :investor %>
+          <li class="nav-item">
+            <%= link_to 'My referrals', children_index_path, class: 'nav-link' %>
+          </li>
+        <% end %>
       <% end %>
     </ul>
     <ul class="navbar-nav">
