--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,7 +9,7 @@
       <% if user_signed_in? %>
         <% if current_user.has_role? :investor %>
           <li class="nav-item">
-            <%= link_to 'My referrals', children_index_path, class: 'nav-link' %>
+            <%= link_to 'My referrals', children_index_path, class: 'nav-link', 'data-turbolinks' => false %>
           </li>
         <% end %>
       <% end %>
