--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,20 @@
 
   <body>
     <%= render 'layouts/navbar' %>
+    <% flash.each do |type, message| %>
+    <% bootstrap_class = case type
+                         when 'notice' then 'alert-success'
+                         when 'alert' then 'alert-warning'
+                         when 'error' then 'alert-danger'
+                         else 'alert-info'
+                         end %>
+    <div class="alert <%= bootstrap_class %> alert-dismissible fade show" role="alert">
+      <%= message %>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+  <% end %>
     <%= yield %>
   </body>
 </html>
