Create transaction model and add aasm to manage states

--- a/app/views/investments/_form.html.erb
+++ b/app/views/investments/_form.html.erb
@@ -31,7 +31,7 @@
 <script>
     document.addEventListener("turbo:load", () => {
         const amountInput = document.getElementById('amountInvested');
-        const periodSelect = document.getElementById('period');
+        const periodSelect = document.getElementById('investment_period');
         const cryptoSelect = document.getElementById('cryptoSelect');
         const returnsContainer = document.getElementById('returnsContainer');
 
