--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,6 +11,16 @@
           <li class="nav-item">
             <%= link_to 'My referrals', children_index_path, class: 'nav-link', 'data-turbolinks' => false %>
           </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="walletDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Wallets
+            </a>
+            <div class="dropdown-menu" aria-labelledby="walletDropdown">
+              <%= link_to 'Wallet 1', root_path, class: 'dropdown-item' %>
+              <%= link_to 'Wallet 2', root_path, class: 'dropdown-item' %>
+              <%= link_to 'Wallet 3', root_path, class: 'dropdown-item' %>
+            </div>
+          </li>
         <% end %>
       <% end %>
     </ul>
