--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -78,3 +78,11 @@
     background-color: white !important;
     color: black !important;
 }
+
+.simulation-in-progress {
+    color: green;
+}
+
+.simulation-finished {
+    color: red;
+}
