Creating model spec's

--- a/app/views/wallets/_rewards.html.erb
+++ b/app/views/wallets/_rewards.html.erb
@@ -1,5 +1,5 @@
 <div class="card mt-4">
-  <div class="card-header">REWARDS</div>
+  <div class="card-header">BONUS</div>
   <div class="card-body">
     <table class="table">
       <thead>
